# AortaGPT_V3

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/raw/: mac_arterial_events.docx
utils/: clinvar_api.py  document_processor.py  helper_functions.py  km_visualizer.py  openai_client.py  rag_engine.py  test_openai_key.py  vector_store.py
