[project]
name = "aortagpt-v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.7.4",
    "langchain>=0.0.267",
    "langchain-openai>=0.0.1",
    "matplotlib>=3.7.1",
    "numpy>=1.24.3",
    "openai>=1.0.0",
    "pandas>=2.0.1",
    "pypdf>=3.15.1",
    "python-docx>=0.8.11",
    "python-dotenv>=1.0.0",
    "python-pptx>=0.6.11",
    "requests>=2.31.0",
    "streamlit>=1.22.0",
    "unstructured>=0.17.2",
]
